<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/sandYellow"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/girlBoy"
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/girlboy" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup_design"
        android:backgroundTint="@color/white"
        android:layout_below="@id/girlBoy">


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/aclonica"
                android:padding="8dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_design"
                android:hint="@string/enter_your_email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="textEmailAddress" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/username"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_design"
                android:hint="@string/set_a_username"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="textEmailAddress" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_design"
                android:hint="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:autofillHints="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_design"
                android:hint="@string/confirm_password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:autofillHints="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signupbutton"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:background="@drawable/button_design"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>





</RelativeLayout>