<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sandYellow">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/bevan"
            android:text="@string/admin_s_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Admincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/dialogbox_stroke"
            android:hint="@string/enter_admin_s_code"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Admindone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:background="@drawable/dialog_button_design"/>

    </LinearLayout>



</LinearLayout>