<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sandYellow"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/girlBoy"
            android:layout_width="500dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/girlboy"
            android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup_design"
        android:backgroundTint="@color/white"
        android:layout_below="@id/girlBoy">


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/aclonica"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_design"
                android:hint="@string/enter_your_email"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:minHeight="48dp"
                android:autofillHints=""
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/email_design"
                android:hint="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColorHint="@color/black"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:autofillHints="" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/button_design"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/createANewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_n_create_a_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>





</RelativeLayout>